登录注册模块完成

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -140,17 +140,25 @@
         android:layout_gravity="center_horizontal">
 
         <TextView
+            android:id="@+id/tv_weChat_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_title_color"
             style="@style/base_text_style"
             android:text="微信登录"
-            android:drawablePadding="3dp"
+            android:drawablePadding="5dp"
             android:textSize="12sp"
             android:drawableTop="@mipmap/icon_wechat"/>
 
         <TextView
+            android:id="@+id/tv_aLiPay_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black_title_color"
             style="@style/base_text_style"
             android:text="支付宝支付"
             android:layout_marginLeft="50dp"
-            android:drawablePadding="3dp"
+            android:drawablePadding="5dp"
             android:textSize="12sp"
             android:drawableTop="@mipmap/icon_alipay"/>
 
