--- a/app/src/main/res/layout/activity_fast_login.xml
+++ b/app/src/main/res/layout/activity_fast_login.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/shape_gray50">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -24,13 +24,13 @@
             android:background="@drawable/shape_gray50">
 
 
-
             <EditText
                 android:id="@+id/et_phone"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:hint="手机号"
+                android:hint="输入手机号"
                 android:inputType="number"
                 android:maxLength="11"
                 android:paddingBottom="12dp"
@@ -41,10 +41,20 @@
                 android:textColorHint="@color/grayText"
                 android:textSize="14sp"/>
 
+            <TextView
+                android:id="@+id/tv_code"
+                style="@style/base_text_style"
+                android:textSize="12sp"
+                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:gravity="center"
+                android:textColor="@color/red"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="获取验证码"/>
+
 
         </LinearLayout>
-
-
 
 
     </LinearLayout>
@@ -58,9 +68,8 @@
         android:layout_marginRight="12dp"
         android:orientation="horizontal"
         android:background="@drawable/shape_gray50">
-
         <EditText
-            android:id="@+id/et_pass"
+            android:id="@+id/et_code"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -71,35 +80,41 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:background="@drawable/shape_gray50"
-            android:hint="短信验证码"
+            android:hint="输入短信验证码"
             android:textSize="14sp"
             android:inputType="number"
             android:maxLength="6"
             android:textColor="@color/black_title_color"
             android:textColorHint="@color/grayText"/>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/gray_line"/>
 
 
-        <TextView
-            android:id="@+id/tv_code"
-            style="@style/base_text_style"
-            android:textSize="12sp"
-            android:layout_height="match_parent"
-            android:layout_width="80dp"
-            android:gravity="center"
-            android:textColor="@color/red"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="获取验证码"/>
+
+
     </LinearLayout>
 
 
 
+    <EditText
+        android:id="@+id/et_pass"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="15dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:background="@drawable/shape_gray50"
+        android:hint="输入登录密码"
+        android:layout_marginTop="12dp"
+        android:textSize="14sp"
+        android:inputType="textPassword"
+        android:maxLength="18"
+        android:textColor="@color/black_title_color"
+        android:textColorHint="@color/grayText"/>
+
+
 
 
 
@@ -107,34 +122,26 @@
 
 
     <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_register"
         style="@style/login_btn_style"
         android:layout_marginTop="30dp"
-        android:text="登录"/>
-
+        android:text="注册"/>
 
 
     <TextView
         android:id="@+id/tv_switch"
+        style="@style/click_toolbar_style"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp"
-        android:layout_margin="12dp"
-        android:layout_gravity="center"
-        android:textSize="14sp"
-        style="@style/click_toolbar_style"
         android:layout_alignParentRight="true"
-        android:textColor="@color/gray_black_text"
+        android:layout_gravity="center"
+        android:layout_margin="12dp"
         android:drawableLeft="@mipmap/icon_switch"
         android:drawablePadding="3dp"
-        android:text="手机密码登录"/>
-
-
-
-
-
-
-
+        android:padding="12dp"
+        android:text="手机密码登录"
+        android:textColor="@color/black_title_color"
+        android:textSize="14sp" />
 
 
 </LinearLayout>
