--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,7 @@
         android:background="@drawable/shape_gray50">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
@@ -26,10 +26,11 @@
 
             <EditText
                 android:id="@+id/et_phone"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:background="@null"
-                android:hint="手机号"
+                android:hint="输入手机号"
                 android:inputType="number"
                 android:maxLength="11"
                 android:paddingBottom="12dp"
@@ -39,6 +40,18 @@
                 android:textColor="@color/black_title_color"
                 android:textColorHint="@color/grayText"
                 android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/tv_code"
+                style="@style/base_text_style"
+                android:textSize="12sp"
+                android:layout_height="match_parent"
+                android:layout_width="80dp"
+                android:gravity="center"
+                android:textColor="@color/red"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:text="获取验证码"/>
 
 
         </LinearLayout>
@@ -67,31 +80,17 @@
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
             android:background="@drawable/shape_gray50"
-            android:hint="短信验证码"
+            android:hint="输入短信验证码"
             android:textSize="14sp"
             android:inputType="number"
             android:maxLength="6"
             android:textColor="@color/black_title_color"
             android:textColorHint="@color/grayText"/>
 
-        <View
-            android:layout_width="1dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:background="@color/gray_line"/>
 
 
-        <TextView
-            android:id="@+id/tv_code"
-            style="@style/base_text_style"
-            android:textSize="12sp"
-            android:layout_height="match_parent"
-            android:layout_width="80dp"
-            android:gravity="center"
-            android:textColor="@color/red"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:text="获取验证码"/>
+
+
     </LinearLayout>
 
 
@@ -102,12 +101,12 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
-        android:paddingLeft="15dp"
+        android:paddingLeft="25dp"
         android:paddingRight="15dp"
         android:paddingTop="12dp"
         android:paddingBottom="12dp"
         android:background="@drawable/shape_gray50"
-        android:hint="密码"
+        android:hint="输入登录密码"
         android:layout_marginTop="12dp"
         android:textSize="14sp"
         android:inputType="textPassword"
@@ -116,10 +115,30 @@
         android:textColorHint="@color/grayText"/>
 
 
+    <EditText
+        android:id="@+id/et_recomment_code"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"
+        android:paddingLeft="25dp"
+        android:paddingRight="15dp"
+        android:paddingTop="12dp"
+        android:paddingBottom="12dp"
+        android:background="@drawable/shape_gray50"
+        android:hint="输入推荐码（选填）"
+        android:layout_marginTop="12dp"
+        android:textSize="14sp"
+        android:inputType="text"
+        android:maxLength="18"
+        android:textColor="@color/black_title_color"
+        android:textColorHint="@color/grayText"/>
+
+
     <LinearLayout
-        android:id="@+id/ll_agreement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
 
@@ -133,35 +152,39 @@
             android:paddingBottom="12dp"
             android:src="@mipmap/agreement_selete_no"/>
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:textSize="14sp"
-
-            android:layout_marginLeft="-5dp"
-            android:textColor="@color/black_title_color"
+            style="@style/base_text_style"
             android:text="我已阅读并同意"/>
 
         <TextView
-            android:id="@+id/tv_agreement"
+            android:id="@+id/tv_register_agreement"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_gravity="center_vertical"
-            android:text="《用户注册协议》"
-            android:paddingTop="12dp"
-            android:paddingBottom="12dp"
-            android:gravity="center"
+            android:textSize="14sp"
             style="@style/click_toolbar_style"
             android:textColor="@color/baseColor"
-            android:textSize="14sp" />
+            android:padding="5dp"
+            android:text="《用户协议》"/>
+
+        <TextView
+            style="@style/base_text_style"
+            android:text="和"/>
+
+        <TextView
+            android:id="@+id/tv_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="14sp"
+            style="@style/click_toolbar_style"
+            android:textColor="@color/baseColor"
+            android:padding="5dp"
+            android:text="《隐私条款》"/>
 
 
     </LinearLayout>
 
 
     <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_register"
         style="@style/login_btn_style"
         android:layout_marginTop="30dp"
         android:text="注册"/>
