--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -34,5 +34,11 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="base_space">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">8dp</item>
+        <item name="android:background">@color/gray_bg</item>
+
+    </style>
 
 </resources>
