--- a/baselibrary/src/main/res/layout/view_load_more.xml
+++ b/baselibrary/src/main/res/layout/view_load_more.xml
@@ -70,7 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="~已经到底了~"
+            android:text="~ 已经到底啦 ~"
             android:textColor="@android:color/darker_gray"/>
     </FrameLayout>
 </FrameLayout>
