--- a/baselibrary/src/main/res/values/color.xml
+++ b/baselibrary/src/main/res/values/color.xml
@@ -3,7 +3,7 @@
     <color name="gray_bg">#f4f4f4</color>
     <color name="white">#FFFFFF</color>
 
-    <color name="red">#FF0000</color>
+    <color name="red">#DF2826</color>
     <color name="grayText">#999999</color>
 
     <color name="black">#111111</color>
