--- a/baselibrary/src/main/res/layout/layout_content.xml
+++ b/baselibrary/src/main/res/layout/layout_content.xml
@@ -4,6 +4,7 @@
     android:id="@+id/content_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/gray_bg"
     android:orientation="vertical">
 
 
