搜索页及搜索结果页

--- a/baselibrary/src/main/res/layout/base_empty_view.xml
+++ b/baselibrary/src/main/res/layout/base_empty_view.xml
@@ -22,6 +22,7 @@
             android:layout_marginTop="30dp"
             android:lineSpacingExtra="8dp"
             android:gravity="center"
+            android:textColor="@color/grayText"
             android:text="暂无数据"/>
 
         <TextView
