--- a/baselibrary/src/main/res/values/color.xml
+++ b/baselibrary/src/main/res/values/color.xml
@@ -3,6 +3,7 @@
     <color name="gray_bg">#f4f4f4</color>
     <color name="white">#FFFFFF</color>
 
+
     <color name="red">#DF2826</color>
     <color name="grayText">#999999</color>
 
@@ -11,5 +12,10 @@
 
     <color name="gray_line">#dddddd</color>
     <color name="main_tab_gray_text_color">#292929</color>
+
+    <color name="item_touch_color">#FFE5E5E5</color>
+    <color name="item_touch_color_default">#FFFFFF</color>
+
+    <color name="gray_deep">#404751</color>
 
 </resources>
