--- a/baselibrary/src/main/res/values/color.xml
+++ b/baselibrary/src/main/res/values/color.xml
@@ -5,6 +5,7 @@
 
 
     <color name="red">#DF2826</color>
+    <color name="red_shadow">#FDF4ED</color>
     <color name="grayText">#999999</color>
 
     <color name="black">#111111</color>
