--- a/app/src/main/res/layout/item_find_hottopic_search.xml
+++ b/app/src/main/res/layout/item_find_hottopic_search.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/ll_root"
-    android:layout_marginLeft="12dp"
+    android:paddingLeft="12dp"
+    android:background="@color/white"
     android:orientation="vertical">
 
     <TextView
@@ -19,6 +20,13 @@
         android:ellipsize="end"
         android:textColor="@color/black_title_color"
         android:text="#这双球鞋真上头#"
+        />
+
+    <View
+        android:id="@+id/view_linea"
+        android:visibility="gone"
+        style="@style/line_light"
+        android:layout_marginRight="12dp"
         />
 
 
