--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -40,6 +40,10 @@
                 android:textStyle="bold"/>
         </androidx.appcompat.widget.Toolbar>
 
+        <View
+            style="@style/line_light"
+            />
+
 
     </LinearLayout>
 
@@ -65,6 +69,10 @@
 
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+
+        <View
+            style="@style/line_light"
+            />
 
         <LinearLayout
             android:id="@+id/ll_bottom"
@@ -114,7 +122,7 @@
 
             <TextView
                 android:id="@+id/tv_settlement"
-                style="@style/base_btn_style"
+                style="@style/base_btn_style_large"
                 android:text="结算"
                 />
         </LinearLayout>
