--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:paddingLeft="12dp"
-    android:paddingBottom="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="12dp"
-    android:id="@+id/ll_root"
-    android:gravity="center_vertical"
-    android:background="@drawable/touch_bg"
-    android:orientation="horizontal">
+    android:orientation="vertical">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="12dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:paddingRight="12dp"
+        android:id="@+id/ll_root"
+        android:gravity="center_vertical"
+        android:background="@drawable/touch_bg"
+        android:orientation="horizontal">
     <ImageView
         android:id="@+id/iv_selete"
         android:layout_width="wrap_content"
@@ -92,7 +96,7 @@
                 android:layout_weight="1"
                 android:layout_marginTop="3dp"
                 android:layout_height="wrap_content"
-                tools:text="￥90"
+                android:text="￥90"
                 android:textSize="14sp"
                 android:textColor="@color/baseColor"/>
 
@@ -144,4 +148,9 @@
 
 
 
+</LinearLayout>
+
+    <View
+        style="@style/line_light"
+        />
 </LinearLayout>
