--- a/app/src/main/res/layout/item_order_goods.xml
+++ b/app/src/main/res/layout/item_order_goods.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/white">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,7 +18,6 @@
     android:paddingRight="10dp"
     android:paddingBottom="10dp"
     android:paddingTop="10dp"
-    android:background="@drawable/touch_bg"
     android:orientation="horizontal">
 
 
@@ -111,6 +111,18 @@
 
 
 </LinearLayout>
+
+
+    <TextView
+        android:id="@+id/tv_btn1"
+        android:visibility="gone"
+        style="@style/base_btn_style"
+        android:background="@drawable/shape_line_blacktitle50"
+        android:textColor="@color/black_title_color"
+        android:layout_gravity="right"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="12dp"
+        android:text="退款" />
 
 </LinearLayout>
 
