--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="baseColor">#DF2826</color>
     <color name="baseColorDeep">#DC0000</color>
     <color name="gray_black_text">#666666</color>
+
+    <color name="yellow">#FDF4ED</color>
 </resources>
