--- a/app/src/main/res/layout/item_cardsale_banner.xml
+++ b/app/src/main/res/layout/item_cardsale_banner.xml
@@ -12,15 +12,36 @@
         style="@style/base_space"
         />
 
-    <com.cinderellavip.weight.ScaleImageView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_weight="1"
-        android:layout_height="0dp"
-        app:scale="0.465317919"
-        android:scaleType="centerCrop"
-        android:src="@mipmap/banner_card_sale"
-        android:layout_margin="12dp"
-        />
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:paddingLeft="12dp"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@mipmap/icon_life_more"/>
+
+        <TextView
+            android:id="@+id/tv_title"
+            style="@style/base_text_style"
+            android:text="日常保洁"
+            android:layout_weight="1"
+            android:textStyle="bold"
+            android:layout_marginLeft="10dp"
+            />
+
+        <TextView
+            style="@style/base_text_style_gray_small"
+            android:text="更多"
+            android:padding="12dp"
+            android:drawableRight="@mipmap/right_black_icon"
+            android:drawablePadding="5dp"
+            />
+    </LinearLayout>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_goods"
